--- a/backend/.env
+++ b/backend/.env
@@ -2,14 +2,14 @@ MONGODB_URI=mongodb+srv://skumar21082001:skumar121252@realestate.sm2bzjn.mongodb
 PORT=5001
 JWT_SECRET=Backend
 JWT_REFRESH_SECRET=BackendRefresh
-# For email OTP
-EMAIL_USER=roboyz952o@gmail.com
+# For email change kro kuch bhi 
+EMAIL_USER=skumar21082001
 EMAIL_PASS=qcng yitp oocv lyob
 # For SMS OTP
 TWILIO_SID=your_twilio_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth
-TWILIO_PHONE=+1234567890
-#  google
+TWILIO_PHONE=+1234567890 
+#  googlec han
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 CLIENT_URL=http://localhost:5173
